# hoip

./: Cargo.toml  README.md  flake.nix  treefmt.toml
.github/workflows/: main.yml
src/: codec.rs  discovery.rs  lib.rs
src/discovery/: crc.rs  mod.rs  packet.rs
