[package]
name = "hid-over-ip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
evdev = { version = "0.13.1", features = ["futures-core", "serde", "tokio", "stream-trait"] }
futures = "0.3.31"
postcard = { version = "1.1.3", features = ["alloc", "use-std"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync", "io-util"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
